# ProductTrainTare

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  config.json  main.cc
controllers/: api_Setting.cc  api_Setting.h  api_Train.cc  api_Train.h  api_User.cc  api_User.h
custom/: utils.cpp  utils.h
models/: Detail.cc  Detail.h  History.cc  History.h  Picture.cc  Picture.h  Record.cc  Record.h  Settings.cc  Settings.h  Train.cc  Train.h  Users.cc  Users.h  data.db  model.json
plugins/: PPOCR.cc  PPOCR.h
task/: OCRTask.cpp  OCRTask.h
